--- a/sign.html
+++ b/sign.html
@@ -37,7 +37,7 @@
             const data = Object.fromEntries(formData.entries());
 
             try {
-                const response = await fetch('http://127.0.0.1:9005/signup/', {
+                const response = await fetch('https://722b-2401-4900-2357-6f82-856b-c8a3-72c6-f74.ngrok-free.app/signup/', {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json',
@@ -64,7 +64,7 @@
             const data = Object.fromEntries(formData.entries());
 
             try {
-                const response = await fetch('http://127.0.0.1:9005/login/', {
+                const response = await fetch('https://722b-2401-4900-2357-6f82-856b-c8a3-72c6-f74.ngrok-free.app/login/', {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json',
