--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 
     <!-- Libraries Stylesheet -->
     <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
+
     <!-- Customized Bootstrap Stylesheet -->
     <link href="css/style.css" rel="stylesheet">
 </head>
@@ -69,8 +70,8 @@
                     <a href="course.html" class="nav-item nav-link">Courses</a>
                     <a href="contact.html" class="nav-item nav-link">Contact</a>
                 </div>
-                <a href="sign.html" class="btn btn-primary py-2 px-4">Join Us</a>
-            </div>            
+                <a href="sign.html" class="btn btn-primary py-2 px-4 d-none d-lg-block">Join Us</a>
+            </div>
         </nav>
     </div>
     <!-- Navbar End -->
