--- a/index.html
+++ b/index.html
@@ -316,6 +316,32 @@
 
     <!-- Template Javascript -->
     <script src="js/main.js"></script>
+     <script>
+        document.addEventListener("DOMContentLoaded", function() {
+            console.log("DOM content loaded");  // Debug log
+            const userEmail = localStorage.getItem('userEmail');
+            console.log("Retrieved userEmail from local storage:", userEmail);  // Debug log
+
+            const authButton = document.getElementById('auth-button');
+            const userInfo = document.getElementById('user-info');
+            const userEmailDisplay = document.getElementById('user-email');
+            const logoutButton = document.getElementById('logout-button');
+
+            if (userEmail) {
+                authButton.style.display = 'none';
+                userEmailDisplay.textContent = userEmail;
+                userInfo.style.display = 'inline-flex';
+
+                logoutButton.addEventListener('click', function() {
+                    localStorage.removeItem('userEmail');
+                    window.location.reload();  // Reload the page after logout
+                });
+            } else {
+                authButton.style.display = 'block';
+                userInfo.style.display = 'none';
+            }
+        });
+    </script>
 </body>
 
 </html>
